@@ -2,19 +2,21 @@
 Hash: SHA256
 
 DIST bash-support-3.10.tar.bz2 85356 SHA256 fbba4f1e903cbdff8b9bb94281ff9652415b081c4362fdadc4589475ce1cca12 SHA512 5038ce4cbc0bc1b71681525063c3a9e1423bea2b76e5197f5e2120b13e650bd59c49854841b0bc9c33c88b35c9ef44ef1b6829c0ed7fbac0ff8d5cc1f5a0aaed WHIRLPOOL 01108256de987b9ce8b2791369fd59718ae2d2abbd6dd17fad6c99245f8c7bab225ceead99275a7adc3230aec31f7e7370cfebd1907f885989d5eb8740a22ab2
+DIST bash-support-3.12.tar.bz2 84647 SHA256 029754c033c3a0e4583d21c1888e19a6b5e982f1eff8d9dec1c540652a571452 SHA512 5c4b778482be34fe9e60389dd6ee94c4db7c067ae5a4d8c00a3dcfd831fbb3e32073f05826b43687536b7dcb892df8f12ba6732fb723e418e12870058a0b1eb5 WHIRLPOOL b36daa58ddb86a9df82628d5906151d5b2a62545f4daaefba08bf48ccf909b52885835b262a44df9f16169511856c78cdce51d9276da4e4b17cce3a8b5e41dc7
 DIST bash-support-3.8.tar.gz 95983 SHA256 93a9a2c40c60b832352202a44da2a97c152b870c9321300264aaaaf5cd7f2231 SHA512 e11c4d1aefe3081ece4181d68a35e9f132cab0b55abe9459524cf7c78c5cc9de0bb32d1afcfd08ca555288ddb0c794585e274ebc545bdbc35e44fdaf1a4f89dd WHIRLPOOL f27eec6f03d8c6b33ff2fcadd63dc5bba34c8d5c36be50374fb176e35face1948acd3e22c5cb9bdf9ef40042925764f9e4d19b3c43f902ded1da69158d56fa79
 EBUILD bash-support-3.10.ebuild 608 SHA256 ae5b8c3e66a23e9de3e298925a0aa4c57369352d639f7fe831b00efb165d3d21 SHA512 889ccdc5f31cb29e8c422d4d89f86ad62c173892956bc272bbac8b73d8d46340ccff89f5f6d572ca6905b00ae8d3eb84d4dd8b8c8576c935823a4863c16f8f1a WHIRLPOOL ed22c16bb7221a5d0328170679c9443b3472b1edae94fee1b14a62ab6984054f2c243aea038d611900690d25e1eeb9a804e9d96c34fa9781b0799ed66938b6ea
+EBUILD bash-support-3.12.ebuild 604 SHA256 eb2841a60394fc11fda98df1c5a72e36b3c48f00435c1623c95aefc1ea43d896 SHA512 62e8b84c71b75b3eb1ec553b04f1a41c5f91e98026b180e4b0cdc4a066ce5172f01ba2ff668c1ad2130ed4ae2c96cf2f0207e06f5663ad4f05b35a68ceac5d89 WHIRLPOOL 907842bd20cfe183480c3aa2d443d5552a0cfe732e95572d088ac3fa76bbc1d0f4902ac09ec30614d37b6c61b92b79e24954f09d8b4c18ff9578379ae84040b8
 EBUILD bash-support-3.8.ebuild 848 SHA256 d017d45088b4d830cedc1d588dbd874c4851dc1e04b561e332a17e1f03eeb0e8 SHA512 5ec663220b087536bdf6b71460880ae4a6e00682ea0547d7b365940745797597b8e1dfd23310422ad835727500426ab17594655ae640bb4185b60d0d1a32e252 WHIRLPOOL 8b9f08e2920b8af81af07c8137f7628d3a55bafc53244f7918f646b4d06ce11954871f6d38056ada9d4262530df93733d9f99e87d77ed58b0aeb74e00c8c5355
-MISC ChangeLog 1393 SHA256 7ffafc43e0a8dd6e48295560a0e22da8b95e7fe989dc28343a284f8f6c5fa7e6 SHA512 b34e6808081f5a842f92514a114dc2a09319145e53e0694c400b7cfdaf51857a4c36c4fb334e3a7c40e055628b1516b3df38472aa474efc319dc096b9a8ed01d WHIRLPOOL 1fb5d6399c84720dae6253d034a6af07e2db0c3c34b4943cb8b4040829841d4c2777846b42d097cd2b223f14d025ee1d920cefd73616b05f5443af6c86b59c2f
+MISC ChangeLog 1521 SHA256 d64b7a02a89083ceda6a374ed8a07a70a37fc030c940b681fa44fba92721923b SHA512 9337897b907446fabc8eaa48cbb3773ad4d45e1fb92558c01998250a66488a89d35b645346e495362bbc88de482ab044b13406d8e7b0d8c95d8f8101e24a5d81 WHIRLPOOL 322b79190e6fff27ae0dce87209cc096f0bb571464e0da18bb598aa9b3fc7677fa96e5414784dce59a73b38a739a6cb3776be16380aad60004f0d6dd8b2d9941
 MISC metadata.xml 157 SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a SHA512 3b60e5c539f0940f297c22ce014cbecfbe31a7321c59384d9f1e8ee929b9685793b7231f49b2a153ddd1b89e3e5a56e5a304e11f321b28147ae47309a3272d70 WHIRLPOOL 22e97df7eb8669d9899254e880755052a8ef06dab300794173011b031a34c438bfc9de390e2a3bd2630927245c1055e789dd113078c2c6bafa7d4f723638a9d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQHEbkAAoJEEqz6FtPBkyjMmYH/RYrN6fLtyaY2aToR/5zOgrw
-wlCEoUBKy2sGmhFVW1UJMguupz0ND3I6wvPUsP5E1HGrprM9ZTHajxyP2Fi4CTex
-t9M1HwXPgWTZoGiW/L2M/8OBh00XxGwCvBtAHsqnYp6fFEBFRwIgh7nfrxQcKZrw
-pGVg9TlPdP9xxtf+GafuVvAO9ghOiao9ZtNGmU0xASOfy+2gDPKAE9m2I2wC+M4I
-xmHw6VCCDienASC6ZsjEV9btrR7/7NMhPgwKI0y0WjN7OBTckB9cz53kN8OQqSus
-Gje3+s7W3Hq3FAFqvRyWscwYnLWGt3TSd6K2+vGks/4pwQ1DQYOF7NAGv2xWhGM=
-=zreP
+iQEcBAEBCAAGBQJQ8wkGAAoJEEqz6FtPBkyjsusIAKxsoaYpWfGKeL8e/IctVyaz
+jW+PUOxP9cPZrUaeoZYqDIc5RgufeJJpaeJY2hNGT5MOSOJsl02b8DFoweWmK73n
+2vMSX03dQtCABUhl3y4dd46CIRMFSkkc4Y9FEBODEannoq3GrtL3qsEjU/bvYFYq
+ijC5YN6db058VoJC9JgidCAr2arN2+Y5Lk0MeWomHD0duGGIIdR2rQhIHfgXhhgM
+6YEnO+ZBbRaxeSU+n/Xay9kSIn5sSeVmTLZB7NAPLkNcPY+v5MR4hpCS6HTNij91
+NcJz/1zxSlrFhHe2gUmLI4+10yENGaEtGtd0VaJ4WBWN0FkBtvh2RXj4S4yJvKs=
+=JdjB
 -----END PGP SIGNATURE-----
