@@ -3,18 +3,20 @@ Hash: SHA256
 
 DIST c-support-5.16.1.tar.gz 126671 SHA256 b0c6e3d58c163358c5f4956847c7a86947e5d030c15f6127f305d5617e508d13 SHA512 e1d5d6df9d543ce9ffbdecc1582503e22d56009a2384699f168df86faf7dcd00d96de92132a74f0a584f902ad0fd6ad329bfb437a4ed84a497225cd5b1795398 WHIRLPOOL ba73c91f50380aef9363e6caf3aa24ae75579a3a2fe54590fd06987a21095a2a2a580f600c82776f3149d16cf8d156ca8270140af4149ba5601dfbf6e3adbd03
 DIST c-support-5.19.tar.bz2 113324 SHA256 843bdb7b3802eb3dc6ad94607e31f3045b4a6a8fb791752c7654534994b8741c SHA512 2a23dc84591c8d3c9777a285940402c8daccd7b6eaecb04b281713ef444738169d7f0130cce27dae6dd3f1f2a27cb56ab6c21eb6b007d7e0f82cd2f64801c77a WHIRLPOOL 87e08c0e11c5302290cb2df1693e9304a1050a5f802ca300b037082d1289927be7ab24fd4d13b6270c20348c50dcd1bbe9696f5bd53d1ea65f28d57cf715c084
+DIST c-support-6.0.tar.bz2 130832 SHA256 8dfb9c283967906f3a1c6d251a7d4734b58debc6da6ed4fdb0788c526492ed72 SHA512 280e8e91b8961ad856524f1869ecd580870ccbb6064c02aefdd5cec7f55a7bf12a17c76a4de91c8d2a7fed25bd96e793909f7cc258b9664f295e1324e0b392da WHIRLPOOL 5743eec9901453007a65d056cfa061f23d6f4326338071ec38748590202d81988b4699c3329d58f94334434f4506ba34b87273618e806efa2484b8ec93e83b08
 EBUILD c-support-5.16.1.ebuild 804 SHA256 be0fa81c3b7a72147856e5ffe843e94a393f08ffc5cc7e738f090d29a6110684 SHA512 3c32a76b18d953aa1afa1b357647483d1f9740b254e6a00a847c542c4f3cb05e6f9f4050922d1a98de0711397ac627b0672d3b4e5f68739dea8769496e6080ac WHIRLPOOL 4314ab4356941b6e495ab8f42e2c2de4b0ad875b7f5c6c502857e70817c2a942599386be8b7adf818a411084f7fa22935d7a0c712d3f17a257bf84c39bd9abe0
 EBUILD c-support-5.19.ebuild 607 SHA256 5fb5ab7589abfdbe18814561b0409fa60b51bc0088011c4d2965ff4f1a2a3863 SHA512 1449feab806d5a51ee60337617a24fec060cf33c4c97ee02c2fb4f90b65a9aae91c72e8b98bea54896016f68fc16d60242105e351917238c76f67c565c40d676 WHIRLPOOL 309f53850a096b9df9a7a102785ecd4339094241fb743fb8e4fa8fad6217ec4167fc420a61f6773465ae2d7660db6a34e7f78f59d8f8c3cafe06d14420c6f54f
-MISC ChangeLog 723 SHA256 869b1247de40f378a4b95f981734a9a1133b30be5acd15bbde39cc83e9edfb27 SHA512 5c7190182cfe9f22ea6d59ba5720c6ac18bc34e73d573ab65993d1568be89e52f81d7c4e87200c7257ab988d2a10d7e66f343c1c0d8974b9d500e25d35852bca WHIRLPOOL f71dde44758e70f18b11ae0f9a45674e059c22a9cb5dd2cbb5886ff0f38a7449e2713bd055b6c354169d90cbd751140873bea98d1990b6540cbc4f45ca7a97d8
+EBUILD c-support-6.0.ebuild 599 SHA256 82a2b14e77a49c5888a0ac9b1967c3ff6072f3a88b9173c7e606c0f875194ea9 SHA512 c168227235d49c5cfc6de7e650266693441f50c7feeb78ee6ea015f2ee189cf50ef3f3a84013271b2bb8d8f3de2c4f4d097fd03ed17418c31b9aeec079288c41 WHIRLPOOL 430f460dcf925a49cacefcd911e5e24f427ec1359d0718da180426194b0b486b576fb48f6e6309e5f5cd8923ff8d5311a919b38ed52bcb5f77d0b8b1a682e521
+MISC ChangeLog 842 SHA256 b4421284a0edb932c77cbe2e20c91f0aa9a172d103154123ddb2e591e4b6e3ca SHA512 c7305d6341e4e734bfe0d314217cca3e595a37e25b237eac47b7357ea5b7b88ea190bf0076045c406403867267b51b15b17043e1486964c025e1376fb9d2bdab WHIRLPOOL 30aa799fe3f9643ad4bf4ee5a940833b622158e42d70b5928d12674f8979f31e2cbf67364813cdb63fe864cdab4cc0cc66fde3b11357b7b331c4df4f1070dd6f
 MISC metadata.xml 157 SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a SHA512 3b60e5c539f0940f297c22ce014cbecfbe31a7321c59384d9f1e8ee929b9685793b7231f49b2a153ddd1b89e3e5a56e5a304e11f321b28147ae47309a3272d70 WHIRLPOOL 22e97df7eb8669d9899254e880755052a8ef06dab300794173011b031a34c438bfc9de390e2a3bd2630927245c1055e789dd113078c2c6bafa7d4f723638a9d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQHwSGAAoJEEqz6FtPBkyjJcUH/2xyEOXYDAxwvkB4ipsICjmv
-4rD0PakrwcpuNfWJAnH3LtXpHb06Yb3kVpwiqoLV8w/o6N9Vm66U/lv4j+jeTBus
-JnLntVGqNhZFh6GahFTuP7BTjuLcDyN0eaq3sipOuIk/peoVJUM/PGcdiFuD39Sp
-uM0KKJZAW6+7PVvo0Ce+bHluElI8mF8Bv2mwbPtrmwqjYJhIXcg1VI4BylqS7Tnk
-MNZPKMVclSnPPm6M+o95AjMFFUTREXFg5ltnxfadNC/lNipPLdjPZXsSSI1ESS9Z
-9vHQUA0yPQABnmw0kisWAx0ZRCVAqCkiFgQmynmEh50YmAeLNb3hZuIow0FZWPE=
-=EfSy
+iQEcBAEBCAAGBQJQ8wnCAAoJEEqz6FtPBkyjKK4H/1Qlg3G8hwJzdhktJh5IWuPI
+bPN8ki5F14YiA3NLHPd452tsc0I25KB9l/Tiyj5voPqhmzPWz1HOvCmlMeroOe2e
+fe9e17Bp4YrB35ngmAcjCfKayuD1mJvA8KrgEfnYjmMHXT2P6z/PGERgRFlCkrPV
+ojNoEDnCE3PbV4dSf7Gfd9Nq6R99xYUp6o0WWCVS7bNLhW6cWcRMw7SojEdqe34L
+Q6W4o+uVlEJO6MUDg+CpaAFGTxbY4Ftw16Jxuy1Uwp1aU4t7Kd/weV9pNgS7opy/
+17IvhqLqUpxGtHBWVe98ZHHhWCWdHF3zm7YPLtsZNIzxrdfdVv+r0RyrGiX69QM=
+=+g9s
 -----END PGP SIGNATURE-----
